--- a/login.html
+++ b/login.html
@@ -29,7 +29,10 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Jogos</a>                 
-                  </li>                      
+                  </li>     
+                  <li class="nav-item">
+                    <a class="nav-link" href="login.html">>>Login<<</a>                 
+                  </li>                  
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="O que deseja buscar?" aria-label="Search">
@@ -99,11 +102,9 @@
         </section>
 
     </main>
-
-
-
+    
     <footer>
-        <p></p>
+        <p>Desenvolvido por LM Games</p>
     </footer>
 
     <button id="voltar-topo" type="button" class="btn btn-outline-primary">&uarr; Voltar ao topo</button>
