--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Jogos</a>                 
-            </li>                      
+            </li>     
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">>>Login<<</a>                 
+            </li>                  
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="O que deseja buscar?" aria-label="Search">
@@ -76,7 +79,7 @@
       <h2>OS MAIS VENDIDOS</h2>
         <div class="card-group">            
             <div class="card" style="width: 18rem;">
-              <img src="img/jogo1.PNG" class="card-img-top" alt="Descrição da foto">
+              <img src="img/jogo1.PNG" class="card-img-top" alt="Jogo de aventura">
               <div class="card-body">
                 <h5 class="card-title">Jogo 1</h5>
                 <p class="card-text">Jogo do ano</p>
@@ -85,7 +88,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="img/jogo2.PNG" class="card-img-top" alt="Descrição da foto">
+              <img src="img/jogo2.PNG" class="card-img-top" alt="Super Mario">
               <div class="card-body">
                 <h5 class="card-title">Jogo 2</h5>
                 <p class="card-text">Super Mario</p>
@@ -94,7 +97,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="img/jogo3.PNG" class="card-img-top" alt="Descrição da foto">
+              <img src="img/jogo3.PNG" class="card-img-top" alt="O melhor jogo">
               <div class="card-body">
                 <h5 class="card-title">Jogo 3</h5>
                 <p class="card-text">Novidade</p>
@@ -105,11 +108,10 @@
         </div>
     </section>
 
-
   </main>
 
   <footer>
-    <p></p>
+    <p>Desenvolvido por LM Games</p>
   </footer>
 
   <button id="voltar-topo" type="button" class="btn btn-outline-primary" onclick="topo()">&uarr; Voltar ao topo</button>
